<resources>
    <string name="app_name">Bubble LINE Catcher</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="init_permission_allow">Grant</string>
    <string name="init_permission_manage">Manager</string>
    <string name="init_permission_test_notification">Test Notification</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!--個別実装String-->
    <string name="title_switch_is_logging">Logging</string>
    <string name="title_item_open_with_app">Open with LINE</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="text_main_activity_new_message">New message.</string>
    <string name="text_notification_new_message">You have a new Message.</string>
    <string name="text_unknown_member">Unknown Member</string>

    <!--個別実装単位-->
    <string name="unit_day">\'th\'</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="channel_MSG">Message Notification</string>
    <string name="channel_MSG_description">Notification of  the LINE message logged from notification</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="init_permission_notification_access">Noticication Access</string>
    <string name="init_permission_notification_access_detail">In order to catch LINE notification, we request you to notification access permission.</string>
    <string name="init_permission_check_checking">Checking...</string>
    <string name="init_permission_check_okay">Granted</string>
    <string name="init_permission_check_not_granted">Not Granted</string>
    <string name="init_permission_data_access">Strage Access</string>
    <string name="init_permission_bubble_notification">Bubble Notification</string>
    <string name="init_permission_bubble_detail">"To catch notifications with bubble, turn on Bubble Notification."</string>
    <string name="init_permission_allowed">Permission granted.</string>
    <string name="init_permission_denied">Permission denied. Please try again.</string>
</resources>