<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.InitGrantPermissionFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/init_grant_top_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ACFFA3"
                android:text="@string/hello_blank_fragment" />

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/init_grant_notification_access_text2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:lineBreakWordStyle="phrase"
                        android:text="@string/init_permission_notification_access"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/init_grant_notification_access_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="20dp"
                        android:paddingEnd="10dp"
                        android:text="@string/init_permission_check_checking" />

                    <Button
                        android:id="@+id/init_grant_notification_access_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/init_permission_allow" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/init_grant_notification_access_detail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:lineBreakWordStyle="phrase"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/init_permission_notification_access_detail" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/init_grant_read_media_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:lineBreakWordStyle="phrase"
                        android:text="@string/init_permission_bubble_notification"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/init_grant_bubble_notification_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="20dp"
                        android:paddingEnd="10dp"
                        android:text="@string/init_permission_check_checking" />

                    <Button
                        android:id="@+id/init_grant_bubble_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/init_permission_allow" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/init_grant_read_media_detail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:lineBreakWordStyle="phrase"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/init_permission_bubble_detail" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/init_grant_notification_access_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:lineBreakWordStyle="phrase"
                        android:text="@string/init_permission_data_access"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/init_grant_notification_file_access_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="20dp"
                        android:paddingEnd="10dp"
                        android:text="@string/init_permission_check_checking" />

                    <Button
                        android:id="@+id/init_grant_file_access_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/init_permission_allow" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/init_grant_file_access_detail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:lineBreakWordStyle="phrase"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/init_permission_notification_access_detail" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp">


                    <Button
                        android:id="@+id/init_grant_notification_log_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:text="@string/init_permission_allow" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>